src/objects/ProjDash_ProjectLead__c.object
<CustomObject>
    <description>ProjDash - This custom object has a loookup relationship to the Project object. It stores other Project Leads for a Project similar to contact roles</description>
    <fields>
        <fullName>Lead_s__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead(s)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Other_Project_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Name</label>
        <referenceTo>ProjDash_Project__c</referenceTo>
        <relationshipName>Other_Project_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EOP</fullName>
                </value>
                <value>
                    <fullName>Agency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Project Lead</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project_Name__c</columns>
        <columns>Lead_s__c</columns>
        <columns>Role__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{000000}</displayFormat>
        <label>Contact Role</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>